# Signal402

./: .gitignore  README.md
backend/: Cargo.toml  Dockerfile  build_report.txt
backend/src/: agent.rs  main.rs  market.rs  middleware.rs  service.rs  types.rs  x402.rs
frontend/: build_log.txt  build_log_2.txt  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatRoom.tsx  WalletContextProvider.tsx
