[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-client = "3.1.8"
solana-transaction-status = "3.1.8"
solana-sdk = "3.0.0"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "tracing"] }
utoipa = "5.4.0"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
